# marketplace-api-cpp-sdk

./: .gitignore  Makefile  README.md
api/: CMakeLists.txt
api/marketplace/: marketplace.proto
example/: CMakeLists.txt  main.cpp
example/protos/: api.proto
